[gd_scene load_steps=9 format=3 uid="uid://cwldr8s3qkewm"]

[ext_resource type="Texture2D" uid="uid://sgg1g6vin25o" path="res://balls/assets/tennis-ball-0001.png" id="1_6dhlw"]
[ext_resource type="Script" path="res://balls/scripts/ball.gd" id="1_uwcrs"]
[ext_resource type="Script" path="res://balls/scripts/states/ball_state_machine.gd" id="3_d5xk1"]
[ext_resource type="Script" path="res://balls/scripts/states/ball_state_run.gd" id="4_sx3ca"]
[ext_resource type="Script" path="res://balls/scripts/states/ball_state_wait.gd" id="5_rc2ub"]

[sub_resource type="Animation" id="Animation_fxest"]
resource_name = "run"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ysaus"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_skhjf"]
_data = {
"RESET": SubResource("Animation_ysaus"),
"run": SubResource("Animation_fxest")
}

[node name="Ball" type="Node2D"]
script = ExtResource("1_uwcrs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_6dhlw")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_skhjf")
}

[node name="BallStateMachine" type="Node" parent="."]
script = ExtResource("3_d5xk1")

[node name="BallStateRun" type="Node" parent="BallStateMachine"]
script = ExtResource("4_sx3ca")

[node name="BallStateWait" type="Node" parent="BallStateMachine"]
script = ExtResource("5_rc2ub")
